# flux

./: .gitignore  Cargo.toml
examples/: paper-compare.toml
src/: agent.rs  anthropic.rs  cli.rs  engine.rs  error.rs  lib.rs  main.rs  parser.rs  provider.rs  template.rs  validator.rs  workflow.rs
tests/: cli.rs
